# faiss-index-sample

./: .env  README.md  fine_tuning.ipynb  notebook.ipynb  pyproject.toml  sites.yaml
data/: loader.py
src/: service.py
src/agents/: index_agent.py
src/services/: app.py
